# air_hockey_robot

./: .gitignore  CMakeLists.txt  README.md
apps/: app_with_preview.cpp  benchmark.cpp  calibrate.cpp  camera_preview.cpp  config_tuner.cpp  main.cpp  test_live_detection.cpp  test_puck_detection.cpp  test_trajectory.cpp  test_udp.cpp
config/: config.hpp
include/: calibration.hpp  capture.hpp  game_controller.hpp  kalman.hpp  movement.hpp  trajectory.hpp
python/: calibration.py
robot/: Robot_communication.mod  Robot_movement.mod  user.sys
src/: calibration.cpp  capture.cpp  game_controller.cpp  kalman.cpp  movement.cpp  trajectory.cpp
